objects/Stage__c.object
<CustomObject>
    <fields>
        <fullName>Crowd_Capacity__c</fullName>
        <label>Crowd Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Stages</relationshipLabel>
        <relationshipName>Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_piano__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_equipment_available__c</fullName>
        <label>Special equipment available</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>lasers</fullName>
                </value>
                <value>
                    <fullName>pyrotechnics</fullName>
                </value>
                <value>
                    <fullName>smoke machines</fullName>
                </value>
                <value>
                    <fullName>multiple drumsets</fullName>
                </value>
                <value>
                    <fullName>extra subwoofers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stage_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>